--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   video_player: ^2.2.18
   appwrite: ^3.0.1
   flutter_local_notifications: ^9.4.0
+  http: ^0.13.4
+  get: ^4.6.5
+  square_in_app_payments: 1.7.0
 
 dev_dependencies:
   flutter_test:
