--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   get: ^4.6.5
   square_in_app_payments: 1.7.0
   local_auth: ^2.1.0
+  flutter_credit_card: ^3.0.6
   flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
@@ -97,6 +98,9 @@ flutter:
     - assets/images/borders/border_13.png
     - assets/images/borders/border_14.png
     - assets/images/borders/border_15.png
+    - assets/images/credit/bg.png
+    - assets/images/credit/card_bg.png
+    - assets/images/credit/mastercard.png
     - assets/images/tiles/blue.png
     - assets/images/tiles/green.png
     - assets/images/tiles/orange.png
