--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,18 +33,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   audioplayers: ^0.20.1
-  rxdart: ^0.27.3
-  quiver: ^3.0.1+1
-  shared_preferences: ^2.0.13
-  flutter_bloc: ^8.0.1
-  video_player: ^2.2.18
-  appwrite: ^8.2.0
-  flutter_local_notifications: ^9.4.0
-  http: ^0.13.4
+  rxdart: ^0.27.7
+  quiver: ^3.2.1
+  shared_preferences: ^2.1.0
+  flutter_bloc: ^8.1.2
+  video_player: ^2.6.1
+  appwrite: 9.0.0
+  flutter_local_notifications: ^13.0.0
+  http: ^0.13.5
   get: ^4.6.5
-  local_auth: ^2.1.0
+  local_auth: ^2.1.6
   flutter_credit_card: ^3.0.6
   flutter_rating_bar: ^4.0.1
 
@@ -57,8 +57,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
-  flutter_launcher_icons: ^0.9.2
+  flutter_lints: ^2.0.1
+  flutter_launcher_icons: ^0.13.0
   test: ^1.19.5
 
 # For information on the generic Dart part of this file, see the
