--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_credit_card: ^3.0.6
   flutter_rating_bar: ^4.0.1
   flutter_unity_widget: ^2022.2.0
+  pointer_interceptor: ^0.9.3+4
 
 dev_dependencies:
   flutter_test:
