--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_unity_widget: ^2022.2.0
   pointer_interceptor: ^0.9.3+4
+  firebase_messaging: ^14.6.5
 
 dev_dependencies:
   flutter_test:
