--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_unity_widget: ^2022.2.0
   pointer_interceptor: ^0.9.3+4
   firebase_messaging: ^14.6.5
+  firebase_core: ^2.15.1
 
 dev_dependencies:
   flutter_test:
