--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   firebase_messaging: ^14.6.5
   firebase_core: ^2.15.1
 
+  flutter_web_plugins:
+    sdk: flutter
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
