--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,19 +37,19 @@ dependencies:
   audioplayers: ^0.20.1
   rxdart: ^0.27.7
   quiver: ^3.2.1
-  shared_preferences: ^2.1.0
+  shared_preferences: ^2.2.1
   flutter_bloc: ^8.1.2
   video_player: ^2.6.1
-  appwrite: 9.0.0
-  flutter_local_notifications: ^13.0.0
-  http: ^0.13.5
-  get: ^4.6.5
-  local_auth: ^2.1.6
-  flutter_credit_card: ^3.0.6
+  appwrite: ^11.0.0
+  flutter_local_notifications: ^15.1.1
+  http: ^0.13.6
+  get: ^4.6.6
+  local_auth: ^2.1.7
+  flutter_credit_card: ^3.0.7
   flutter_rating_bar: ^4.0.1
   flutter_unity_widget: ^2022.2.0
-  pointer_interceptor: ^0.9.3+4
-  firebase_messaging: ^14.6.5
+  pointer_interceptor: ^0.9.3+6
+  firebase_messaging: ^14.6.7
   firebase_core: ^2.15.1
 
   flutter_web_plugins:
