--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.5
+  cupertino_icons: ^1.0.6
   audioplayers: ^0.20.1
   rxdart: ^0.27.7
   quiver: ^3.2.1
   shared_preferences: ^2.2.1
-  flutter_bloc: ^8.1.2
-  video_player: ^2.6.1
+  flutter_bloc: ^8.1.3
+  video_player: ^2.7.1
   appwrite: ^11.0.0
   flutter_local_notifications: ^15.1.1
   http: ^0.13.6
@@ -51,6 +51,7 @@ dependencies:
   pointer_interceptor: ^0.9.3+6
   firebase_messaging: ^14.6.7
   firebase_core: ^2.15.1
+  timezone: ^0.9.2
 
   flutter_web_plugins:
     sdk: flutter
@@ -65,9 +66,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
-  flutter_launcher_icons: ^0.13.0
-  test: ^1.19.5
+  flutter_lints: ^2.0.3
+  flutter_launcher_icons: ^0.13.1
+  test: ^1.24.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
