--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_messaging: ^14.6.7
   firebase_core: ^2.15.1
   timezone: ^0.9.2
+  form_field_validator: ^1.1.0
 
   flutter_web_plugins:
     sdk: flutter
@@ -133,6 +134,7 @@ flutter:
     - assets/images/bombs/mine.png
     - assets/images/bombs/tnt.png
     - assets/images/bombs/rocket.png
+    - assets/images/login/login-page.png
     # audio
     - assets/audio/swap.wav
     - assets/audio/move_down.wav
