--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,29 +30,33 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  audioplayers: ^0.20.1
+  audioplayers: ^5.2.0
   rxdart: ^0.27.7
   quiver: ^3.2.1
   shared_preferences: ^2.2.1
   flutter_bloc: ^8.1.3
-  video_player: ^2.7.1
+  video_player: ^2.7.2
   appwrite: ^11.0.0
-  flutter_local_notifications: ^15.1.1
+  flutter_local_notifications: ^16.0.0+1
   http: ^0.13.6
   get: ^4.6.6
   local_auth: ^2.1.7
-  flutter_credit_card: ^3.0.7
+  flutter_credit_card: ^4.0.0+1
   flutter_rating_bar: ^4.0.1
   flutter_unity_widget: ^2022.2.0
   pointer_interceptor: ^0.9.3+6
-  firebase_messaging: ^14.6.7
-  firebase_core: ^2.15.1
+  firebase_messaging: ^14.6.9
+  firebase_core: ^2.17.0
   timezone: ^0.9.2
   form_field_validator: ^1.1.0
+  image_picker: ^1.0.4
+  fluttertoast: ^8.2.2
+  image_picker_web: ^3.1.1
+  path_provider: ^2.1.1
+  http_parser: ^4.0.2
 
   flutter_web_plugins:
     sdk: flutter
@@ -69,7 +73,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.3
   flutter_launcher_icons: ^0.13.1
-  test: ^1.24.3
+  test: ^1.24.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
