--- a/unity/Match3/Packages/manifest.json
+++ b/unity/Match3/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
+    "com.vanbassum.wakatime": "https://github.com/vanBassum/Wakatime.Unity.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
