--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,11 @@ dependencies:
   flutter_bloc: ^8.1.3
   video_player: ^2.7.2
   appwrite: ^11.0.0
-  flutter_local_notifications: ^16.0.0+1
+  flutter_local_notifications: ^16.1.0
   http: ^0.13.6
   get: ^4.6.6
   local_auth: ^2.1.7
-  flutter_credit_card: ^4.0.0+1
+  flutter_credit_card: ^4.0.1
   flutter_rating_bar: ^4.0.1
   flutter_unity_widget: ^2022.2.0
   pointer_interceptor: ^0.9.3+6
@@ -54,6 +54,9 @@ dependencies:
   image_picker: ^1.0.4
   fluttertoast: ^8.2.2
   image_picker_web: ^3.1.1
+  infinite_carousel: ^1.0.3
+  flutter_svg: ^2.0.7
+  scratcher: ^2.4.0
 
   flutter_web_plugins:
     sdk: flutter
@@ -117,6 +120,20 @@ flutter:
     - assets/images/tiles/orange.png
     - assets/images/tiles/purple.png
     - assets/images/tiles/red.png
+    - assets/images/slots/777.svg
+    - assets/images/slots/apple.svg
+    - assets/images/slots/bar.svg
+    - assets/images/slots/cherry.svg
+    - assets/images/slots/coin.svg
+    - assets/images/slots/crown.svg
+    - assets/images/slots/lemon.svg
+    - assets/images/slots/watermelon.svg
+    - assets/images/scratcher/scratch.png
+    - assets/images/scratcher/dart.png
+    - assets/images/scratcher/flutter.png
+    - assets/images/scratcher/google.png
+    - assets/images/scratcher/unseen.ttf
+    - assets/images/scratcher/background.jpg
     - assets/images/tiles/yellow.png
     - assets/images/bombs/fish_1.png
     - assets/images/bombs/rainbow_fish.png
