--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,13 +51,13 @@ dependencies:
   firebase_core: ^2.17.0
   timezone: ^0.9.2
   form_field_validator: ^1.1.0
-  image_picker: ^1.0.4
+  image_picker: ^0.8.9
   fluttertoast: ^8.2.2
   image_picker_web: ^3.1.1
   infinite_carousel: ^1.0.3
   flutter_svg: ^2.0.7
   scratcher: ^2.4.0
-  flutter_survey: '^0.1.4'
+  survey_kit: ^0.1.2
 
   flutter_web_plugins:
     sdk: flutter
@@ -100,6 +100,7 @@ flutter:
     - assets/images/background/background2.jpg
     - assets/levels.json
     - assets/unityLevels.json
+    - assets/example_json.json
     - assets/images/borders/border_1.png
     - assets/images/borders/border_2.png
     - assets/images/borders/border_3.png
