--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,40 +32,28 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
   rxdart: ^0.27.7
-  quiver: ^3.2.1
-  shared_preferences: ^2.2.1
+  shared_preferences: ^2.2.2
   flutter_bloc: ^8.1.3
   video_player: ^2.7.2
   appwrite: ^11.0.0
-  flutter_local_notifications: ^16.1.0
-  http: ^0.13.6
-  get: ^4.6.6
-  local_auth: ^2.1.7
-  flutter_credit_card: ^4.0.1
   flutter_rating_bar: ^4.0.1
   flutter_unity_widget: ^2022.2.0
   pointer_interceptor: ^0.9.3+6
-  firebase_messaging: ^14.6.9
-  firebase_core: ^2.17.0
-  timezone: ^0.9.2
   form_field_validator: ^1.1.0
-  image_picker: ^0.8.9
   fluttertoast: ^8.2.2
-  image_picker_web: ^3.1.1
   infinite_carousel: ^1.0.3
   flutter_svg: ^2.0.7
   scratcher: ^2.4.0
+  dependency_validator: ^3.2.3
   survey_kit: ^0.1.2
+  intl: ^0.18.1
 
   flutter_web_plugins:
     sdk: flutter
 
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -74,7 +62,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.3
   flutter_launcher_icons: ^0.13.1
-  test: ^1.24.7
+  test: ^1.24.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
