--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   firebase_core: ^2.22.0
   flutter_local_notifications: ^16.1.0
   permission_handler: ^11.0.1
+  firebase_database: ^10.3.4
+  firebase_storage: ^11.5.0
 
   flutter_web_plugins:
     sdk: flutter
