--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,13 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_bloc: ^8.1.3
   video_player: ^2.8.1
-  appwrite: ^11.0.0
   flutter_rating_bar: ^4.0.1
   flutter_unity_widget: ^2022.2.0
   pointer_interceptor: ^0.9.3+7
   form_field_validator: ^1.1.0
   fluttertoast: ^8.2.4
-  infinite_carousel: ^1.0.3
-  flutter_svg: ^2.0.9
-  scratcher: ^2.4.0
   dependency_validator: ^3.2.3
+  universal_html: ^2.2.4
   survey_kit: ^0.1.2
   intl: ^0.18.1
   device_info_plus: ^9.1.0
