--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   universal_html: ^2.2.4
   survey_kit: ^0.1.2
   intl: ^0.18.1
+  hexcolor: ^3.0.1
   device_info_plus: ^9.1.0
   flutter_local_notifications: ^16.1.0
   permission_handler: ^11.0.1
@@ -94,6 +95,10 @@ flutter:
     - assets/images/bombs/fish_1.png
     - assets/images/bombs/rainbow_fish.png
     - assets/images/login/login-page.png
+    - assets/instructions/ins_1.png
+    - assets/instructions/ins_2.png
+    - assets/instructions/ins_3.png
+    - assets/instructions/ins_4.png
     # audio
     - assets/audio/swap.wav
     - assets/audio/move_down.wav
