--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ flutter:
     - assets/instructions/ins_2.png
     - assets/instructions/ins_3.png
     - assets/instructions/ins_4.png
+    - assets/instructions/ins_5.png
     # audio
     - assets/audio/swap.wav
     - assets/audio/move_down.wav
