--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,6 +103,7 @@ flutter:
     - assets/instructions/ins_3.png
     - assets/instructions/ins_4.png
     - assets/instructions/ins_5.png
+    - assets/instructions/ins_5_alt.png
     - assets/instructions/InstallAndroid.png
     - assets/instructions/InstallIOS.png
     # levels
