--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,22 +38,22 @@ dependencies:
   video_player: ^2.8.1
   flutter_rating_bar: ^4.0.1
   flutter_unity_widget: ^2022.2.0
-  pointer_interceptor: ^0.9.3+7
+  pointer_interceptor: ^0.9.3+7 #Do Not upgrade
   form_field_validator: ^1.1.0
   fluttertoast: ^8.2.4
   dependency_validator: ^3.2.3
   universal_html: ^2.2.4
-  survey_kit: ^0.1.2
-  intl: ^0.18.1
+  survey_kit: ^0.1.2 #Do Not upgrade
+  intl: ^0.18.1 #Do Not upgrade
   hexcolor: ^3.0.1
-  url_launcher: ^6.2.1
+  url_launcher: ^6.2.2
   device_info_plus: ^9.1.1
   flutter_local_notifications: ^16.2.0
   permission_handler: ^11.1.0
-  firebase_core: ^2.24.0
-  firebase_messaging: ^14.7.6
-  firebase_database: ^10.3.6
-  firebase_storage: ^11.5.3
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.9
+  firebase_database: ^10.3.8
+  firebase_storage: ^11.5.6
   pwa_install: ^0.0.5
 
   flutter_web_plugins:
