--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,5 @@ generators/credentials.json
 generators/Extract Song List.py
 
 generators/folder_names.txt
+
+generators/song_list_ultrastar_deluxe.txt
