--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  audioplayers: ^5.2.1
   rxdart: ^0.27.7
   shared_preferences: ^2.2.2
   flutter_bloc: ^8.1.3
@@ -69,7 +70,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
   flutter_launcher_icons: ^0.13.1
-  test: ^1.24.9
+  test: ^1.24.9 #Do Not upgrade
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -90,6 +91,9 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/audio/Background_Music.mp3
+    - assets/audio/losing_music.mp3
+    - assets/audio/winning_music.mp3
     # images
     - assets/images/background/background_new.png
     - assets/images/background/background_new2.png
