--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,5 @@ generators/Extract Song List.py
 generators/folder_names.txt
 
 generators/song_list_ultrastar_deluxe.txt
+
+generators/~$dark_patterns_data.xlsx
