update cron job

--- a/.github/workflows/notification_cron.yml
+++ b/.github/workflows/notification_cron.yml
@@ -3,6 +3,7 @@ name: Scheduled Job
 on:
   schedule:
     - cron: '* * * * *'  # Run every minute
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   run-script:
