--- a/.github/workflows/notification_cron.yml
+++ b/.github/workflows/notification_cron.yml
@@ -2,7 +2,8 @@ name: Scheduled Job
 
 on:
   schedule:
-    - cron: '0 0 18 ? * * *'  # Run every minute
+    - cron: '0 16 * * *'  # Run every day at 6 PM Austrian Standard Time (UTC+1)
+    - cron: '0 15 * 3-10 Sun'  # Run every day at 6 PM Austrian Daylight Saving Time (UTC+2)
   workflow_dispatch:  # Manual trigger
 
 jobs:
