--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.2.4
   dependency_validator: ^3.2.3
   universal_html: ^2.2.4
+  pwa_install: ^0.0.5
   survey_kit: ^0.2.0
   intl: ^0.18.1 #Do Not upgrade
   url_launcher: ^6.2.2
