--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: bachelor_flutter_crush
-description: A new Flutter project.
+description: Eine Studie der Kammer für Arbeiter und Angestellte für Niederösterreich
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
