--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   dependency_validator: ^3.2.3
   universal_html: ^2.2.4
   pwa_install: ^0.0.5
-  survey_kit: ^0.2.0
+  survey_kit: ^1.0.0-dev.4
   intl: ^0.18.1
   url_launcher: ^6.2.4
   device_info_plus: ^9.1.1
@@ -76,7 +76,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icons/tile.png"
+  image_path: "assets/icons/apple-touch-icon.png"
   remove_alpha_ios: true
 
 flutter:
