--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  audioplayers: ^5.2.1
+  just_audio: ^0.9.36
   rxdart: ^0.27.7
   shared_preferences: ^2.2.2
   flutter_bloc: ^8.1.3
