--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ flutter:
     - assets/images/bombs/jelly_gelb_vertical.png
     - assets/images/bombs/jelly_gelb_horizontal.png
     - assets/images/login/login-page.png
+    - assets/icons/ak_uni_logo.jpg
     # Instructions
     - assets/instructions/welcome_1.png
     - assets/instructions/welcome_2.png
