fixed notification for finished survey received twice

--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,4 @@ generators/folder_names.txt
 generators/song_list_ultrastar_deluxe.txt
 
 generators/~$dark_patterns_data.xlsx
+generators/~$flutter_data.xlsx
