played any of last 3 days stats added

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,4 @@ generators/song_list_ultrastar_deluxe.txt
 
 generators/~$dark_patterns_data.xlsx
 generators/~$flutter_data.xlsx
+generators/~$errors.xlsx
