--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,26 +32,26 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  just_audio: ^0.9.36
-  rxdart: ^0.27.7
-  shared_preferences: ^2.2.2
-  flutter_bloc: ^8.1.4
+  just_audio: ^0.9.39
+  rxdart: ^0.28.0
+  shared_preferences: ^2.3.1
+  flutter_bloc: ^8.1.6
   flutter_unity_widget: ^2022.2.1
-  pointer_interceptor: ^0.10.1
-  fluttertoast: ^8.2.4
-  dependency_validator: ^3.2.3
+  pointer_interceptor: ^0.10.1+1
+  fluttertoast: ^8.2.6
+  dependency_validator: ^4.1.0
   universal_html: ^2.2.4
   pwa_install: ^0.0.5
   survey_kit: ^0.2.0
   intl: ^0.18.1
-  url_launcher: ^6.2.5
-  device_info_plus: ^9.1.2
-  permission_handler: ^11.3.0
-  firebase_core: ^2.27.0
-  firebase_messaging: ^14.7.19
-  firebase_database: ^10.4.9
-  firebase_storage: ^11.6.9
-  flutter_native_splash: ^2.3.10
+  url_launcher: ^6.3.0
+  device_info_plus: ^10.1.1
+  permission_handler: ^11.3.1
+  firebase_core: ^3.3.0
+  firebase_messaging: ^15.0.4
+  firebase_database: ^11.0.4
+  firebase_storage: ^12.1.2
+  flutter_native_splash: ^2.4.1
 
   flutter_web_plugins:
     sdk: flutter
@@ -64,7 +64,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   flutter_launcher_icons: ^0.13.1
   test: ^1.24.9 #Do Not upgrade
 
