--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   just_audio: ^0.9.40
+  video_player: ^2.9.1
   rxdart: ^0.28.0
   shared_preferences: ^2.3.2
   flutter_bloc: ^8.1.6
@@ -122,6 +123,8 @@ flutter:
     - assets/unityLevels.json
     # icons
     - assets/icons/android-chrome-512x512.png
+    # videos
+    - assets/videos/spinning_earth.mp4
 
 flutter_native_splash:
   image: assets/instructions/splash_screen.png
