updated werbung; fixed sound for werbung

--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,6 @@ generators/song_list_ultrastar_deluxe.txt
 generators/~$dark_patterns_data.xlsx
 generators/~$flutter_data.xlsx
 generators/~$errors.xlsx
+generators/A_Simulation_Study_on_the_Impact_of_Dark_Patterns_in_Mobile_Games_on_User_Interaction.pdf
+
+generators/ai_checker.py
