--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,7 +100,8 @@ flutter:
     - assets/images/bombs/jelly_gelb_horizontal.png
     - assets/images/login/login-page.png
     # Instructions
-    - assets/instructions/ak_uni_logo.png
+    - assets/instructions/ak_logo.jpg
+    - assets/instructions/sba_logo.png
     - assets/instructions/welcome_1.png
     - assets/instructions/welcome_2.png
     - assets/instructions/ins_1.png
