--- a/.gitignore
+++ b/.gitignore
@@ -205,4 +205,5 @@ generators/A_Simulation_Study_on_the_Impact_of_Dark_Patterns_in_Mobile_Games_on_
 
 generators/ai_checker.py
 
-generators/credentials
+generators/credentials/credentials.json
+generators/credentials/credentials_old.json
