test new credentials file

--- a/.github/workflows/notification_cron.yml
+++ b/.github/workflows/notification_cron.yml
@@ -28,7 +28,11 @@ jobs:
         env:
           FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
         run: |
+          mkdir -p credentials
           echo "$FIREBASE_CREDENTIALS" > credentials/credentials.json
+
+      - name: Verify credentials file
+        run: cat credentials/credentials.json
 
       - name: Run script
         run: |
