--- a/.github/workflows/notification_cron.yml
+++ b/.github/workflows/notification_cron.yml
@@ -19,20 +19,20 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install firebase_admin
-
       - name: Set up Firebase credentials
         env:
           FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
         run: |
           mkdir -p credentials
-          echo "$FIREBASE_CREDENTIALS" > credentials/credentials.json
+          echo "$FIREBASE_CREDENTIALS" > credentials/cred.json
 
       - name: Verify credentials file
         run: cat credentials/credentials.json
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install firebase_admin
 
       - name: Run script
         run: |
